Added two more async endpoints (temporary implementation)
