# swagger_server/models/__init__.py
@@ -11,3 +11,5 @@ from swagger_server.models.datoteka_v_besedilo_body import DatotekaVBesediloBody
 from swagger_server.models.datoteka_v_besedilo_ocr_body import DatotekaVBesediloOcrBody
 from swagger_server.models.datoteka_v_conllu_sync_body import DatotekaVConlluSyncBody
 from swagger_server.models.datoteka_v_conllu_sync_ocr_body import DatotekaVConlluSyncOcrBody
+from swagger_server.models.pretvori_datoteko_in_oznaci_async_body import PretvoriDatotekoInOznaciAsyncBody
+from swagger_server.models.pretvori_datoteko_in_oznaci_async_ocr_body import PretvoriDatotekoInOznaciAsyncOcrBody
