# swagger_server/swagger/swagger.yaml
@@ -3,33 +3,33 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-  - url: http://localhost:8089
-    description: Generated server url
+- url: http://localhost:8089
+  description: Generated server url
 paths:
   /job/{job_id}:
     get:
       tags:
-        - jobs
+      - jobs
       summary: Vrne status
       operationId: get_job_status
       parameters:
-        - name: job_id
-          in: path
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-        - name: show_estimated_completion
-          in: query
-          description: Calculate estimate time remaining based on various factors (could
-            be inaccurate)
-          required: false
-          style: form
-          explode: true
-          schema:
-            type: boolean
+      - name: job_id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          format: int64
+      - name: show_estimated_completion
+        in: query
+        description: Calculate estimate time remaining based on various factors (could
+          be inaccurate)
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: boolean
       responses:
         "200":
           description: OK
@@ -41,7 +41,7 @@ paths:
   /oznaciBesediloAsync:
     post:
       tags:
-        - marktext
+      - marktext
       summary: Označi besedilo s classlo/stanzo z uporabo slovenskih modelov ter vrne
         conll-u format
       operationId: get_text
@@ -60,10 +60,52 @@ paths:
                 type: string
                 x-content-type: '*/*'
       x-openapi-router-controller: swagger_server.controllers.marktext_controller
+  /pretvoriDatotekoInOznaciAsync:
+    post:
+      tags:
+      - marktext
+      summary: Pretvori datoteko v besedilo in označi s classlo/stanzo z uporabo slovenskih
+        modelov ter vrne conll-u format
+      operationId: get_text_from_file
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/pretvoriDatotekoInOznaciAsync_body'
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: string
+                x-content-type: '*/*'
+      x-openapi-router-controller: swagger_server.controllers.marktext_controller
+  /pretvoriDatotekoInOznaciAsync/ocr:
+    post:
+      tags:
+      - marktext
+      summary: Pretvori datoteko v besedilo s pomočjo ocr razpoznavanja in označi
+        s classlo/stanzo z uporabo slovenskih modelov ter vrne conll-u format
+      operationId: get_text_from_file_ocr
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/pretvoriDatotekoInOznaciAsync_ocr_body'
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: string
+                x-content-type: '*/*'
+      x-openapi-router-controller: swagger_server.controllers.marktext_controller
   /izlusci:
     post:
       tags:
-        - extract
+      - extract
       summary: Izlusci terminološke kandidate iz seznama besedil v conllu obliki
       operationId: get_candidates
       requestBody:
@@ -86,7 +128,7 @@ paths:
   /datotekaVBesedilo:
     post:
       tags:
-        - doc-2text
+      - doc-2text
       summary: "Pretvori datoteko formata pdf, doc, docx, ppt, xls,... vraca besedilo"
       operationId: datoteka_v_besedilo_post
       requestBody:
@@ -106,7 +148,7 @@ paths:
   /datotekaVBesedilo/ocr:
     post:
       tags:
-        - doc-2text
+      - doc-2text
       summary: "Pretvori datoteko formata pdf, doc, docx, ppt, xls,... v besedilo\
         \ s pomočjo ocr razpoznavanja"
       operationId: get_text_ocr
@@ -127,7 +169,7 @@ paths:
   /datotekaVConlluSync:
     post:
       tags:
-        - doc-2text
+      - doc-2text
       summary: "Pretvori datoteko formata pdf, doc, docx, ppt, xls,... vraca conllu"
       operationId: datoteka_v_besedilo_in_classla
       requestBody:
@@ -147,7 +189,7 @@ paths:
   /datotekaVConlluSync/ocr:
     post:
       tags:
-        - doc-2text
+      - doc-2text
       summary: "Pretvori datoteko formata pdf, doc, docx, ppt, xls,... v conllu s\
         \ pomočjo ocr razpoznavanja"
       operationId: get_conllu_ocr
@@ -168,48 +210,48 @@ paths:
   /oss/steviloBesedilPoIskanju:
     get:
       tags:
-        - oss
+      - oss
       summary: Vrne število besedil glede na iskalne pogoje
       operationId: get_number_texts
       parameters:
-        - name: leta
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: integer
-              format: int64
-        - name: vrste
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: kljucnebesede
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: cerifpodrocja
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: integer
-              format: int64
+      - name: leta
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
+      - name: vrste
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: kljucnebesede
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: cerifpodrocja
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
       responses:
         "200":
           description: OK
@@ -223,48 +265,48 @@ paths:
   /oss/izlusciPoIskanju:
     get:
       tags:
-        - oss
+      - oss
       summary: 'Vrne terminloške kandidate glede na '
       operationId: get_extracted_words
       parameters:
-        - name: leta
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: integer
-              format: int64
-        - name: vrste
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: kljucnebesede
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: cerifpodrocja
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: integer
-              format: int64
+      - name: leta
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
+      - name: vrste
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: kljucnebesede
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: cerifpodrocja
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
       responses:
         "200":
           description: OK
@@ -279,49 +321,49 @@ paths:
   /oss/datotekePoIskanju:
     get:
       tags:
-        - oss
+      - oss
       summary: Vrne seznam binarnih zapisov v originalnem formatu glede na iskalne
         pogoje
       operationId: get_files
       parameters:
-        - name: leta
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: integer
-              format: int64
-        - name: vrste
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: kljucnebesede
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: cerifpodrocja
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: integer
-              format: int64
+      - name: leta
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
+      - name: vrste
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: kljucnebesede
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: cerifpodrocja
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
       responses:
         "200":
           description: OK
@@ -339,18 +381,18 @@ paths:
   /oss/datotekaPoId:
     get:
       tags:
-        - oss
+      - oss
       summary: Vrne binarni zapis v originalnem formatu po id-ju datoteke
       operationId: get_file
       parameters:
-        - name: file_id
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: integer
-            format: int64
+      - name: file_id
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "200":
           description: OK
@@ -366,48 +408,48 @@ paths:
   /oss/conlluPoIskanju:
     get:
       tags:
-        - oss
+      - oss
       summary: Vrne seznam CoNNL-U-jev glede na iskalne pogoje
       operationId: get_conllus
       parameters:
-        - name: leta
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: integer
-              format: int64
-        - name: vrste
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: kljucnebesede
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: cerifpodrocja
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: integer
-              format: int64
+      - name: leta
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
+      - name: vrste
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: kljucnebesede
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: cerifpodrocja
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
       responses:
         "200":
           description: OK
@@ -422,18 +464,18 @@ paths:
   /oss/conlluPoId:
     get:
       tags:
-        - oss
+      - oss
       summary: Vrne CoNNL-U po id-ju datoteke
       operationId: get_conllu
       parameters:
-        - name: file_id
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: integer
-            format: int64
+      - name: file_id
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "200":
           description: OK
@@ -446,18 +488,18 @@ paths:
   /oss/besediloPoId:
     get:
       tags:
-        - oss
+      - oss
       summary: Vrne besedilo po id-ju datoteke
       operationId: oss_besedilo_po_id_get
       parameters:
-        - name: file_id
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: integer
-            format: int64
+      - name: file_id
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "200":
           description: OK
@@ -470,48 +512,48 @@ paths:
   /oss/besedilaPoIskanju:
     get:
       tags:
-        - oss
+      - oss
       summary: Vrne seznam besedil glede na iskalne pogoje
       operationId: get_texts
       parameters:
-        - name: leta
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: integer
-              format: int64
-        - name: vrste
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: kljucnebesede
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: string
-        - name: cerifpodrocja
-          in: query
-          required: true
-          style: form
-          explode: true
-          schema:
-            type: array
-            items:
-              type: integer
-              format: int64
+      - name: leta
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
+      - name: vrste
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: kljucnebesede
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: string
+      - name: cerifpodrocja
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
       responses:
         "200":
           description: OK
@@ -549,18 +591,18 @@ components:
             format: int64
       example:
         podporneutezi:
-          - 6.0274563
-          - 6.0274563
+        - 6.0274563
+        - 6.0274563
         pogostostpojavljanja:
-          - 1
-          - 1
+        - 1
+        - 1
         POSoznake: POSoznake
         kanonicnaoblika: kanonicnaoblika
         nosilnautez: 0.8008282
         kandidat: kandidat
     JobResponse:
       required:
-        - finished_job
+      - finished_job
       type: object
       properties:
         finished_job:
@@ -583,6 +625,22 @@ components:
       properties:
         besedilo:
           type: string
+    pretvoriDatotekoInOznaciAsync_body:
+      required:
+      - file
+      type: object
+      properties:
+        file:
+          type: string
+          format: binary
+    pretvoriDatotekoInOznaciAsync_ocr_body:
+      required:
+      - file
+      type: object
+      properties:
+        file:
+          type: string
+          format: binary
     izlusci_body:
       type: object
       properties:
@@ -596,7 +654,7 @@ components:
             type: string
     datotekaVBesedilo_body:
       required:
-        - file
+      - file
       type: object
       properties:
         file:
@@ -604,7 +662,7 @@ components:
           format: binary
     datotekaVBesedilo_ocr_body:
       required:
-        - file
+      - file
       type: object
       properties:
         file:
@@ -612,7 +670,7 @@ components:
           format: binary
     datotekaVConlluSync_body:
       required:
-        - file
+      - file
       type: object
       properties:
         file:
@@ -620,7 +678,7 @@ components:
           format: binary
     datotekaVConlluSync_ocr_body:
       required:
-        - file
+      - file
       type: object
       properties:
         file:
